# omp-parallel

./: CMakeLists.txt  README.md  args.cpp  args.h  hit.cpp  main.cpp  rand_1.cpp  rand_1.h  rand_2.cpp  rand_2.h  rand_3.cpp  rand_3.h
test_data/: out.txt
